log
Sat, Apr 19, 2025 10:42:31 PM: 
 hashmap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
Compilation failed
test.c: In function 'insertMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sat, Apr 19, 2025 10:53:21 PM: 
 hashmap.c | 28 +++++++++++++---------------
 1 file changed, 13 insertions(+), 15 deletions(-)
 tests:  0|6
total_score: 0/70
31b6619
Sat, Apr 19, 2025 10:55:44 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
aa2a881
Sun, Apr 20, 2025  9:42:07 AM: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
be4bc92
Sun, Apr 20, 2025  9:48:18 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
470c684
Sun, Apr 20, 2025  9:48:50 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1413e8f
Sun, Apr 20, 2025  9:52:19 AM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
74a044c
Sun, Apr 20, 2025 10:06:00 AM: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
89192b5
Sun, Apr 20, 2025 10:08:18 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|4
total_score: 20/70
d789c93
Sun, Apr 20, 2025 10:20:49 AM: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  4|4
total_score: 20/70
d37f765
Sun, Apr 20, 2025 10:21:57 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|3
total_score: 30/70
ff74855
Sun, Apr 20, 2025 10:31:40 AM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 30/70
33edc8d
